# test-task

./: README.md  attendance.py  data.csv  data_visual.ipynb  pyproject.toml
