[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["zakhar2OO3 <gordeev242424@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
